# egovproc

./: .gitignore  AUTHORS  ChangeLog  Dockerfile  Makefile.am  Makefile.in  configure  configure.ac  egovproc.xsl
data/: Makefile.am  Makefile.in  egovproc.xsl
data/xml/: Makefile.am  Makefile.in  Makefile.sub  template.xml  xmllist.txt
data/xml/280003/281000/: k302RG00000631.xml  k302RG00001241.xml  k302RG00001279.xml  k302RG00001446.xml  k302RG00001524.xml  k302RG00001708.xml  k302RG00001848.xml
data/xml/340006/342149/: r382RG00000036.xml
docs/css/: common.css
m4/: progs.m4
